# wayland_multi_window

./: README.md  pubspec.yaml
example/: pubspec.yaml
example/lib/: event_widget.dart  main.dart
example/linux/: my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
lib/: wayland_multi_window.dart
lib/src/: layer_shell_controller.dart  layer_shell_controller_impl.dart
linux/: CMakeLists.txt  base_flutter_window.h  flutter_window.cc  flutter_window.h  layer_surface.cpp  layer_surface.h  multi_window_manager.cc  multi_window_manager.h  wayland_multi_window_plugin.cc  wayland_multi_window_plugin_internal.h  window_channel.h
linux/include/wayland_multi_window/: wayland_multi_window_plugin.h
